# weatherfax_pi

./: .gitignore  .travis.yml  CMakeLists.old.txt  CMakeLists.txt  CoordinateSets.xml  Frontend2.md  LIBS.txt  README  README-BUILD.md  README.md  Read-Build.md  VERSION.cmake  WeatherFax.fbp  WeatherFaxInternetRetrieval.xml  WeatherFaxSchedules.xml  WeatherFaxUI.cpp  WeatherFaxUI.h  appveyor.old.yml  appveyor.yml  bld-o562.bat  bld-o571.bat  bld.bat  build-win.bat  build-win.sh  change_submodule_banch.sh  run-circleci-local.txt  tp-copy.bat  tp-copy.sh  update_submodule_branch.sh  weatherfax.fbp  weatherfax_pi.cpp
.circleci/: config - Copy.yml  config.yml  config.yml.bak
OLD/: CMakeLists.txt.bak  circleci-build-macos.sh.bak
buildosx/InstallOSX/: weatherfax_pi.pkgproj.in
ci/: circleci-build-android-arm64.sh  circleci-build-android-armhf.sh  circleci-build-debian.sh  circleci-build-flatpak.sh  circleci-build-macos.sh  circleci-build-mingw.sh  circleci-build-msvc.bat  circleci-build-raspbian-armhf.sh  cloudsmith-upload.sh  control  control.trusty  control.xenial  travis-build-debian.sh  travis-build-osx.sh  travis-build-raspbian-armhf-part1.sh  travis-build-raspbian-armhf-part2.sh
cmake/: FindPortaudio.cmake  FindTinyXML.cmake  FindTinyXML.cmake.bak  PluginConfigure.cmake  PluginConfigure.cmake.bak  PluginConfigure.cmake.old  PluginCurl.cmake  PluginGL.cmake  PluginGL.cmake.old  PluginInstall.cmake  PluginInstall.cmake.old  PluginLocalization.cmake  PluginNMEA.cmake  PluginNMEA.cmake.unused.bak  PluginPackage.cmake  PluginPackage.cmake.old  PluginSetup.cmake  PluginXML.cmake  version.h.in
cmake/in-files/: appveyor-upload.sh.in  cloudsmith-upload.sh.in  org.opencpn.OpenCPN.Plugin.yaml.in  plugin.xml.in  version.h.in
data/: CoordinateSets-high.xml  CoordinateSets-high.xml.bak  CoordinateSets-normal.xml  CoordinateSets-normal.xml.bak  CoordinateSets.xml  CoordinateSets.xml.bak  MET-strdate-work-needed.md  PassageWeather-Old.xml  WeatherFax-Update-Notes.md  WeatherFax-Update-Notes.txt  WeatherFaxInternetRetrieval.xml  WeatherFaxInternetRetrieval_Australia.xml  WeatherFaxInternetRetrieval_Aviation_Weather.xml  WeatherFaxInternetRetrieval_EUMetSat_ASCAT.xml  WeatherFaxInternetRetrieval_EUMetSat_ASCAT.xml.bak  WeatherFaxInternetRetrieval_Europe.xml  WeatherFaxInternetRetrieval_LaMMA.xml  WeatherFaxInternetRetrieval_Misc.xml  WeatherFaxInternetRetrieval_NAVY.xml  WeatherFaxInternetRetrieval_NOAA.xml  WeatherFaxInternetRetrieval_NOAA_OPC.xml  WeatherFaxInternetRetrieval_PWx_Amer_Atl.xml  WeatherFaxInternetRetrieval_PWx_Euro_Atl.xml  WeatherFaxInternetRetrieval_PWx_India.xml  WeatherFaxInternetRetrieval_PWx_Pacific.xml  WeatherFaxSchedules.xml  White-paper-DATE_and_STRDATE_Functions.docx
extsrc/json-schema-validator/: json-validator.cpp
libs/curl/: CMakeLists.txt
libs/plugingl/include/: pidc.h
libs/wxcurl/src/: base.cpp  dialog.cpp  panel.cpp
libs/wxcurl/src/wx/curl/: base.h
manual/: antora.yml  site.yml
manual/docs/: 404.html  index.html  sitemap.xml
manual/docs/_/css/: site.css
manual/docs/weatherfax/0.1/: index.html  weatherfax.html
manual/modules/ROOT/pages/: index.adoc
manual/weatherfax/: antora.yml  site.yml
manual/weatherfax/modules/ROOT/pages/: weatherfax.adoc
mingw/fedora/: opencpn-deps.spec
ocpninclude/: shaders.h
po/: POTFILES.in  POTFILES.in.test  aa_ER.po  ar_SA.po  bg_BG.po  ca.po  ca_ES.po  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  el_GR.po  en_GB.po  es.po  es_ES.po  et.po  et_EE.po  fi.po  fi_FI.po  fil_PH.po  fr.po  fr_FR.po  gl.po  gl_ES.po  he_IL.po  hi_IN.po  hu.po  hu_HU.po  id_ID.po  is_IS.po  it.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb.po  nb_NO.po  (+21 more)
src/: AboutDialog.cpp  AboutDialog.h  DecoderOptionsDialog.cpp  DecoderOptionsDialog.h  FaxDecoder.cpp  FaxDecoder.h  InternetRetrievalDialog.cpp  InternetRetrievalDialog.h  SchedulesDialog.cpp  SchedulesDialog.h  WeatherFax.cpp  WeatherFax.h  WeatherFaxDialog.cpp  WeatherFaxDialog.h  WeatherFaxImage.cpp  WeatherFaxImage.h  WeatherFaxUI.cpp  WeatherFaxUI.h  WeatherFaxWizard.cpp  WeatherFaxWizard.h  defs.h  georef.h  icons.cpp  icons.h  ocpn_plugin.h  weatherfax_icon.h  weatherfax_pi.cpp  weatherfax_pi.h  wximgkap.cpp  wximgkap.h
src/libaudiofile/: CAF.cpp  File.cpp  Makefile.in  Marker.cpp  NeXT.cpp  Raw.h  Setup.cpp  Track.cpp  WAVE.cpp  config.h  debug.cpp  extended.c  openclose.cpp  util.cpp  util.h
src/libaudiofile/alac/: ag_dec.c  ag_enc.c  dp_dec.c  dp_enc.c  dplib.h
src/libaudiofile/modules/: BlockCodec.cpp  FileModule.cpp  IMA.cpp  MSADPCM.cpp  Makefile.in  ModuleState.cpp  PCM.cpp  SimpleModule.h
src/plugingl/: linmath.h  pidc.cpp  qtstylesheet.cpp
src/po/: POTFILES.in  da_DK.po  gl_ES.po  nb_NO.po
src/wxcurl/: base.cpp  dav.cpp  davtool.cpp  dialog.cpp  ftp.cpp  ftpparse.cpp  ftpparse.h  ftptool.cpp  http.cpp  panel.cpp  telnet.cpp  thread.cpp  utils.cpp
src/wxcurl/wx/curl/: base.h  dav.h  davtool.h  dialog.h  ftp.h  ftptool.h  panel.h  telnet.h
